# kiosk

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix  treefmt.nix
.cargo/: config.toml
resources/: styles.css
src/: api.rs  main.rs  window_events.rs
src/components/: background_dots.rs  category.rs  constants.rs  kiosk_item.rs  mod.rs  navbar.rs  pill_button.rs  search_bar.rs
src/hemkop/: mod.rs  product.rs  search.rs
