cargo-features = ["codegen-backend"]

[package]
name = "kiosk"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "0.6.0", features = [] }
gloo-timers = "0.3.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["Window", "Document", "MouseEvent"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
