cargo-features = ["codegen-backend"]

[package]
name = "kiosk"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { version = "^0.6.3", features = ["fullstack", "router"] }
gloo-timers = { version = "0.3.0", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
wasm-bindgen-futures = { version = "0.4.50", optional = true }
web-sys = { version = "0.3.77", features = [
	"Window",
	"Document",
	"MouseEvent",
] }
reqwest = { version = "0.12.15", features = [
	"brotli",
	"zstd",
	"gzip",
	"deflate",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"

[features]
default = []
web = [
	"dioxus/web",
	"dep:gloo-timers",
	"dep:wasm-bindgen",
	"dep:wasm-bindgen-futures",
]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
